--- a/tablas.html
+++ b/tablas.html
@@ -108,8 +108,15 @@
     </tr>
 </table>
 <table>
+    <caption></caption>
+    <thead>
+        <!--Nuestra fila y celdas de encabezado-->
+    </thead>
+    <tfoot>
+        <!--Información una fila y celdas  del pie de tabla-->
+    </tfoot>
     <tbody>
-        
+        <!-- Información de la tabla-->        
     </tbody>
 </table>
 </body>
